<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nearby_hospitals">hospital</string>
    <string name="nearby_phamacies">pharmacy</string>
    <string name="nearby_defibrillators">defibrillator</string>
</resources>