<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.forum.NewPostActivity">

    <ImageView
        android:id="@+id/newPostInfoBackGround"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/questions_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newPostConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPostTitleLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/question"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintBottom_toTopOf="@+id/switch_enable_notifications"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newPostCategoryTxtLayout"
                    app:startIconDrawable="@drawable/ic_question"
                    tools:ignore="MissingConstraints">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newPostTitleEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPostCategoryTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/category"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:startIconDrawable="@drawable/ic_category"
                    tools:ignore="MissingConstraints">

                    <AutoCompleteTextView
                        android:id="@+id/newPostCategoryDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_gender"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_enable_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:hint="@string/toggle_switch_enable_notifications"
                    android:textSize="20sp"
                    app:boxStrokeColor="@color/teal_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newPostTitleLayout" />

                <Button
                    android:id="@+id/newPostSaveButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/teal_200"
                    android:onClick="sendPost"
                    android:text="@string/post_question"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_enable_notifications" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/newPostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:lineSpacingExtra="8sp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="20"
        android:text="@string/add_a_new_post"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newPostConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>